--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
   "debug.internalConsoleOptions": "neverOpen",
   "azureFunctions.preDeployTask": "npm prune",
   "staticWebApps.appSubpath": "/vue-app/",
-  "staticWebApps.apiSubpath": "/vue-app/api",
-  "staticWebApps.outputSubpath": "/vue-app/dist"
+  "staticWebApps.apiSubpath": "api",
+  "staticWebApps.outputSubpath": "dist"
 }
